--- a/Dream_shop/dream_shop/static/styles/password-forgot.css
+++ b/Dream_shop/dream_shop/static/styles/password-forgot.css
@@ -1,4 +1,4 @@
-/* Le style de fond général de la page */
+/* General background style of the page */
 .background-forgot {
   position: absolute;
   top: 0;
@@ -12,7 +12,8 @@
   z-index: -1;
   opacity: 0.3;
 }
-/* Ajouter une superposition de couleur à l'arrière-plan pour améliorer la lisibilité du texte au premier plan */
+
+/* Add a color overlay to the background to improve text readability in the foreground */
 .background-forgot::after {
   content: "";
   display: block;
@@ -24,7 +25,7 @@
   background-color: rgba(49, 93, 104, 0.5);
 }
 
-/* Style de base pour le container où le contenu principal sera affiché */
+/* Basic style for the container where the main content will be displayed */
 .container-forgot {
   position: relative;
   padding: 40px;
@@ -39,12 +40,12 @@
   background-color: rgba(255, 255, 255, 0.7); /* Color blanc avec opacité à 0.5 */
 }
 
-/* Garantir que la barre de navigation reste au-dessus de tout le reste */
+/* Ensure the navigation bar stays on top of everything else */
 nav.sticky-nav {
   z-index: 100;
 }
 
-/* Style de l'élément form dans le conteneur, alignement et espacement */
+/* Style for the form element within the container, alignment and spacing */
 .container-forgot .forgot {
   display: flex;
   justify-content: center;
@@ -52,7 +53,8 @@ nav.sticky-nav {
   flex-direction: column;
   gap: 25px;
 }
-/* Style des titres h2 dans les formulaires */
+
+/* Style for the h2 headings within the forms */
 .container-forgot .forgot h2 {
   color: #315D68;
   padding-top: 10px;
@@ -61,14 +63,15 @@ nav.sticky-nav {
   font-size: 2em;
   font-family: 'Ananda', arial, cursive, sans-serif;
 }
-/* Style des champs de saisie (inputBox) */
+
+/* Style for the input fields (inputBox) */
 .container-forgot .forgot .inputBox {
   position: relative;
   width: 300px;
   margin-right: 45px;
 }
 
-/* Style des inputs dans inputBox */
+/* Style for the inputs within inputBox */
 .container-forgot .forgot .inputBox input {
   padding: 12px 10px 12px 48px;
   border: none;
@@ -85,7 +88,8 @@ nav.sticky-nav {
   outline: none;
   opacity: 0.7;
 }
-/* Style du span dans inputBox */
+
+/* Style for the span within inputBox */
 .container-forgot .forgot .inputBox span {
   position: absolute;
   margin-top: -43px;
@@ -98,7 +102,8 @@ nav.sticky-nav {
   letter-spacing: 0.01em;
   color: rgba(255, 255, 255, 0.5);
 }
-/* Modification de la couleur et de la bordure des inputs valides et focus dans inputBox */
+
+/* Styling for valid and focused inputs within inputBox */
 .container-forgot .forgot .inputBox input:valid ~ span,
 .container-forgot .forgot .inputBox input:focus ~ span {
   color: #fff;
@@ -110,12 +115,14 @@ nav.sticky-nav {
   border-radius: 10px;
   letter-spacing: 0.1em;
 }
-/* Modification de la couleur et de la bordure des inputs valides et focus dans inputBox */
+
+/* Styling for valid and focused inputs within inputBox */
 .container-forgot .forgot .inputBox input:valid,
 .container-forgot .forgot .inputBox input:focus {
   border: 1px solid rgba(49, 93, 104, 0.8);;
 }
-/* Style de l'icône (i) dans inputBox */
+
+/* Style for the icon (i) within inputBox */
 .container-forgot .forgot .inputBox i {
   position: absolute;
   top: 15px;
@@ -126,7 +133,8 @@ nav.sticky-nav {
   color: #fff;
   border-right: 1px solid yellow;
 }
-/* Style du bouton de soumission dans inputBox */
+
+/* Style for the submission button within inputBox */
 .container-forgot .forgot .inputBox input[type="submit"] {
   background: #315D68;
   color: #fff;
@@ -142,28 +150,33 @@ nav.sticky-nav {
   width: 362px;
   transition: background 0.2s ease-in-out, color 0.2s ease-in-out;
 }
-/* Ajout d'un effet de survol aux boutons de soumission */
+
+/* Add hover effect to the submission buttons */
 .container-forgot .forgot .inputBox input[type="submit"]:hover {
-  background: #1a2e45; /* Changez cela à la couleur que vous préférez pour le hover */
-  color: #ffffff; /* Changez cela à la couleur que vous préférez pour le texte lors du hover */
+  background: #1a2e45;
+  color: #ffffff;
 }
-/* Style des paragraphes dans le formulaire */
+
+/* Style for the paragraphs within the form */
 .container-forgot .forgot p {
   color: #315D68;
   font-size: 1.2em;
   font-weight: 300;
 }
-/* Style des liens dans les paragraphes du formulaire */
+
+/* Style for the links within the form paragraphs */
 .container-forgot .forgot p a {
   color: #315D68;
   font-size: 1em;
   transition: color 0.2s ease-in-out;
 }
-/* Ajout d'un effet de survol aux liens */
+
+/* Add hover effect to the links */
 .container-forgot .forgot p a:hover {
   color: #2e859a;
 }
-/* Style des liens de mot de passe oublié dans inputBox */
+
+/* Styling for the forgot password links in inputBox */
 .container-forgot .forgot .inputBox .forgot-password {
   color: #315D68;
   font-size: 15px;
