--- a/Dream_shop/templates/base.html
+++ b/Dream_shop/templates/base.html
@@ -3,17 +3,19 @@
 <!DOCTYPE html>
 <html lang="fr">
 
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Bienvenue à Ma boutique de rêve, votre destination numéro un pour tous vos besoins en matière de mode. Nous nous engageons à vous fournir les meilleures tendances de la mode, avec un accent sur la qualité, le service à la clientèle, et l'unicité.">
-    <meta name="keywords" content="Mode, Ma boutique de rêve, vêtements, tendances de la mode, boutique en ligne, vêtements de qualité, service à la clientèle">
-    <meta name="author" content="Mathieu Morel">
+    <meta name="description"
+        content="Bienvenue à Ma boutique de rêve, votre destination numéro un pour tous vos besoins en matière de mode. Nous nous engageons à vous fournir les meilleures tendances de la mode, avec un accent sur la qualité, le service à la clientèle, et l'unicité.">
+    <meta name="keywords"
+        content="Mode, Ma boutique de rêve, vêtements, tendances de la mode, boutique en ligne, vêtements de qualité, service à la clientèle">
+    <meta name="author" content="Mathieu Morel & Caroline Chochoy">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <!-- TITRE DE LA PAGE -->
+    <!-- PAGE TITLE -->
     <title>Ma Boutique De Rêve</title>
-    <!-- PAGES CSS -->
+    <!-- PAGE CSS -->
     <link rel="icon" href="{% static 'styles/images/favicon.ico' %}" type="image/x-icon">
     <link rel="stylesheet" href="{% static 'styles/navbar.css' %}">
     <link rel="stylesheet" href="{% static 'styles/header.css' %}">
@@ -26,14 +28,14 @@
     <link rel="stylesheet" href="{% static 'styles/register.css' %}">
     <link rel="stylesheet" href="{% static 'styles/password-forgot.css' %}">
     <link rel="stylesheet" href="{% static 'styles/index.css' %}">
-    
-    <!-- BIBLIOTHEQUE DE LOGO -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
+
+    <!-- LOGO LIBRARY -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" />
-  </head>
+</head>
 
-  <body>
+<body>
 
     <!-- navbar -->
     {% include 'includes/navbar.html' %}
