--- a/Dream_shop/dream_shop/static/styles/footer.css
+++ b/Dream_shop/dream_shop/static/styles/footer.css
@@ -1,6 +1,9 @@
-/* Style général pour le pied de page */
+/*******************************************************
+******************* General Footer Styles **************
+*******************************************************/
+
+/* General style for the footer */
 footer {
-  /* Styles de base : dimensions, couleurs, disposition, marge, padding */
   width: 100%;
   background: #315D68;
   color: #fff;
@@ -9,15 +12,13 @@ footer {
   align-items: center;
   margin-top: auto;
   padding: 20px 0;
-  /* Styles pour l'arrière-plan : taille, image de fond, animation */
   background-size: 200% 200%;
   background-image: linear-gradient(to top, #1a2e45, #315D68);
   animation: gradient 4s ease infinite;
 }
 
-/* Animation du gradient de l'arrière-plan du pied de page */
+/* Animation for the footer background gradient */
 @keyframes gradient {
-  /* Déplacement de l'image de fond pendant l'animation */
   0% {
     background-position: 0% 50%;
   }
@@ -29,9 +30,8 @@ footer {
   }
 }
 
-/* Conteneur principal du pied de page */
+/* Main container for the footer */
 .footer-container {
-  /* Mise en page en grille, ajustement automatique des colonnes, espace entre les éléments, dimensions, padding */
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: 20px;
@@ -39,24 +39,12 @@ footer {
   padding: 0 10px;
 }
 
-/* Styles pour les différents blocs du pied de page */
-.footer-contact,
-.footer-legal,
-.footer-logo-newsletter {
-  /* Styles de base */
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background: rgba(255, 255, 255, 0.1);
-  padding: 13px;
-  border-radius: 15px;
-  /* Ajout de l'effet d'ombre */
-  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.4);
-}
+/*******************************************************
+*********************** Footer Title *******************
+*******************************************************/
 
-/* Styles pour les titres dans le pied de page */
+/* Styles for the footer title */
 .footer-container h3 {
-  /* Style de police, marge, espacement des lettres */
   font-size: 1.4rem;
   font-weight: 500;
   margin-bottom: 15px;
@@ -66,80 +54,89 @@ footer {
   color: #FFD700;
 }
 
-/* Style pour le texte dans les blocs "contact" et "legal" du pied de page */
+/*******************************************************
+*********************** Footer Blocks ******************
+*******************************************************/
+
+/* Styles for the different blocks in the footer */
+.footer-contact,
+.footer-legal,
+.footer-logo-newsletter {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: rgba(255, 255, 255, 0.1);
+  padding: 13px;
+  border-radius: 15px;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.4);
+}
+
+/* Styles for the text in the "contact" blocks of the footer */
 .footer-contact p {
-  /* Taille de police, alignement du texte, marge */
   font-size: 0.9rem;
   text-align: center;
   margin-bottom: 10px;
 }
 
-/* Style pour les liens de contact*/
+/* Styles for contact links */
 .footer-contact a  {
   text-decoration: none;
 }
 
-/* Effet de survol pour les liens de contact*/
+/* Hover effect for contact links */
 .footer-contact a:hover {
   text-shadow: 0 0 5px pink, 0 0 10px rgb(220, 146, 159), 0 0 15px pink, 0 0 20px pink;
 }
 
-/* Style pour les textes des liens */
+/* Styles for the text in the links */
 .footer-contact a p {
   color: #FFD700;
   font-size: 14px;
 }
 
-/* Conteneur pour les boutons des réseaux sociaux */
+/* Container for social media buttons */
 .footer-socials {
-  /* Disposition, alignement, marge */
   display: flex;
   justify-content: center;
   margin-top: 2px;
 }
 
-/* Espacement des boutons des réseaux sociaux */
+/* Spacing for social media buttons */
 .footer-socials a {
   margin: 0 10px;
 }
 
-/* Style pour les images des boutons des réseaux sociaux */
+/* Styles for social media button images */
 .footer-socials img {
-  /* Hauteur, transition */
   height: 45px;
   transition: transform 0.5s;
 }
 
-/* Effet au survol pour les images des boutons des réseaux sociaux */
+/* Hover effect for social media button images */
 .footer-socials img:hover {
-  /* Agrandissement */
   transform: scale(1.3);
 }
 
-/* Conteneur pour le logo et le bouton de newsletter */
+/* Container for logo and newsletter button */
 .footer-logo-newsletter {
-  /* Alignement */
   justify-content: center;
   align-items: center;
 }
 
-/* Style pour le logo dans le pied de page */
+/* Styles for the logo in the footer */
 .footer-logo img {
-  /* Hauteur, marge */
   height: 100px;
   margin-bottom: 10px;
 }
 
-/* Style Numero de siret */
+/* Styles for the siret number */
 .footer-logo p {
-  /* Centrer */
   text-align: center;
   font-size: 15px;
 }
 
-/* Style pour le bouton de la newsletter */
+/* Styles for the newsletter button */
 .newsletter-button {
-  /* Styles de base : couleur de fond, couleur de police, police, padding, bordure, arrondissement, décoration de texte, pointeur, transition */
   background-color: #FFD700;
   color: #315D68;
   font-family: 'Ananda', 'Cinzel Decorative', arial, cursive, sans-serif;
@@ -154,18 +151,16 @@ footer {
   transition: background-color 0.5s ease, color 0.5s ease;
 }
 
-/* Effet au survol pour le bouton de la newsletter */
+/* Hover effect for the newsletter button */
 .newsletter-button:hover {
-  /* Changement de couleur de fond et de police, ombre du texte */
   background-color: #315D68;
   color: white;
   border: 1px solid #FFD700;
   text-shadow: 0 0 5px pink, 0 0 10px rgb(220, 146, 159), 0 0 15px pink, 0 0 20px pink;
 }
 
-/* Style pour les liens dans le bloc "legal" du pied de page */
+/* Styles for the links in the "legal" block of the footer */
 .footer-legal a {
-  /* Couleur, décoration de texte, transition, taille de police, alignement du texte, marge */
   color: #fff;
   text-decoration: none;
   transition: color 0.5s ease;
@@ -174,15 +169,13 @@ footer {
   margin-bottom: 1px;
 }
 
-/* Effet au survol pour les liens dans le bloc "legal" du pied de page */
+/* Hover effect for the links in the "legal" block of the footer */
 .footer-legal a:hover {
-  /* Ombre du texte */
   text-shadow: 0 0 5px pink, 0 0 10px rgb(220, 146, 159), 0 0 15px pink, 0 0 20px pink;
 }
 
-/* Style pour le copyright en bas de page */
+/* Style for the copyright at the bottom of the page */
 .footer-copyright {
-  /* Alignement du texte, largeur, taille de police, marge, couleur */
   text-align: center;
   width: 100%;
   font-size: 0.8rem;
@@ -191,7 +184,7 @@ footer {
   color: #ccc;
 }
 
-/* Styliser le select horaire magasin*/
+/* Styling for the store hours select */
 #store-hours {
   width: 258px;
   padding: 5px;
@@ -202,7 +195,8 @@ footer {
   font-size: 13px;
   transition: transform 0.5s;
 }
-/* effet de survol pour horaire magasin*/
+
+/* Hover effect for the store hours select */
 #store-hours:hover {
   background-color: #FFD700;
 }
