--- a/Dream_shop/dream_shop/static/styles/register.css
+++ b/Dream_shop/dream_shop/static/styles/register.css
@@ -1,4 +1,4 @@
-/* Le style de fond général de la page */
+/* General background style of the page */
 .background-signup {
   position: absolute;
   top: 0;
@@ -12,7 +12,8 @@
   z-index: -1;
   opacity: 0.3;
 }
-/* Ajouter une superposition de couleur à l'arrière-plan pour améliorer la lisibilité du texte au premier plan */
+
+/* Add a color overlay to the background to improve text readability in the foreground */
 .background-signup::after {
   content: "";
   display: block;
@@ -23,7 +24,8 @@
   height: 100%;
   background-color: rgba(49, 93, 104, 0.5);
 }
-/* Style de base pour le container où le contenu principal sera affiché */
+
+/* Base style for the container where the main content will be displayed */
 .container-signup {
   position: relative;
   padding: 40px;
@@ -37,11 +39,13 @@
     inset 5px 5px 15px rgb(237, 227, 227);
   background-color: rgba(255, 255, 255, 0.7); /* Color blanc avec opacité à 0.5 */
 }
-/* Garantir que la barre de navigation reste au-dessus de tout le reste */
+
+/* Ensure the navigation bar stays on top of everything */
 nav.sticky-nav {
   z-index: 100;
 }
-/* Style de l'élément form dans le conteneur, alignement et espacement */
+
+/* Style for the form element within the container, alignment and spacing */
 .container-signup .signup {
   display: flex;
   justify-content: center;
@@ -49,7 +53,8 @@ nav.sticky-nav {
   flex-direction: column;
   gap: 25px;
 }
-/* Style des titres h2 dans les formulaires */
+
+/* Style for the h2 titles in the forms */
 .container-signup .signup h2 {
   color: #315D68;
   padding-top: 10px;
@@ -58,13 +63,15 @@ nav.sticky-nav {
   font-size: 2em;
   font-family: 'Ananda', arial, cursive, sans-serif;
 }
-/* Style des champs de saisie (inputBox) */
+
+/* Style for the input fields (inputBox) */
 .container-signup .signup .inputBox {
   position: relative;
   width: 300px;
   margin-right: 45px;
 }
-/* Style des inputs dans inputBox */
+
+/* Style for the inputs within inputBox */
 .container-signup .signup .inputBox input {
   padding: 12px 10px 12px 48px;
   border: none;
@@ -81,7 +88,8 @@ nav.sticky-nav {
   outline: none;
   opacity: 0.7;
 }
-/* Style du span dans inputBox */
+
+/* Style for the span within inputBox */
 .container-signup .signup .inputBox span {
   position: absolute;
   margin-top: -43px;
@@ -94,7 +102,8 @@ nav.sticky-nav {
   letter-spacing: 0.01em;
   color: rgba(255, 255, 255, 0.5);
 }
-/* Modification de la couleur et de la bordure des inputs valides et focus dans inputBox */
+
+/* Styling for valid and focused inputs in inputBox */
 .container-signup .signup .inputBox input:valid ~ span,
 .container-signup .signup .inputBox input:focus ~ span {
   color: #fff;
@@ -106,12 +115,14 @@ nav.sticky-nav {
   border-radius: 10px;
   letter-spacing: 0.1em;
 }
-/* Modification de la couleur et de la bordure des inputs valides et focus dans inputBox */
+
+/* Styling for valid and focused inputs in inputBox */
 .container-signup .signup .inputBox input:valid,
 .container-signup .signup .inputBox input:focus {
   border: 1px solid rgba(49, 93, 104, 0.8);;
 }
-/* Style de l'icône (i) dans inputBox */
+
+/* Style for the icon (i) within inputBox */
 .container-signup .signup .inputBox i {
   position: absolute;
   top: 15px;
@@ -122,7 +133,8 @@ nav.sticky-nav {
   color: #fff;
   border-right: 1px solid yellow;
 }
-/* Style du bouton de soumission dans inputBox */
+
+/* Style for the submit button within inputBox */
 .container-signup .signup .inputBox input[type="submit"] {
   background: #315D68;
   color: #fff;
@@ -131,35 +143,40 @@ nav.sticky-nav {
   font-size: 1.2em;
   cursor: pointer;
   box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.35),
-  inset -5px -5px 15px rgba(255, 255, 255, 0.1),
-  inset 5px 5px 15px rgba(0, 0, 0, 0.35);
+              inset -5px -5px 15px rgba(255, 255, 255, 0.1),
+              inset 5px 5px 15px rgba(0, 0, 0, 0.35);
   font-family: 'Ananda';
   letter-spacing: 0.15em;
   width: 362px;
   transition: background 0.2s ease-in-out, color 0.2s ease-in-out;
 }
-/* Ajout d'un effet de survol aux boutons de soumission */
+
+/* Add hover effect to submit buttons */
 .container-signup .signup .inputBox input[type="submit"]:hover {
-  background: #1a2e45; /* Changez cela à la couleur que vous préférez pour le hover */
-  color: #ffffff; /* Changez cela à la couleur que vous préférez pour le texte lors du hover */
+  background: #1a2e45;
+  color: #ffffff;
 }
-/* Style des paragraphes dans le formulaire */
+
+/* Style for the paragraphs within the form */
 .container-signup .signup p {
   color: #315D68;
   font-size: 1.2em;
   font-weight: 300;
 }
-/* Style des liens dans les paragraphes du formulaire */
+
+/* Style for links within the form paragraphs */
 .container-signup .signup p a {
   color: #315D68;
   font-size: 1em;
   transition: color 0.2s ease-in-out;
 }
-/* Ajout d'un effet de survol aux liens */
+
+/* Add hover effect to links */
 .container-signup .signup p a:hover {
   color: #2e859a;
 }
-/* Style des liens de mot de passe oublié dans inputBox */
+
+/* Style for the forgot password links within inputBox */
 .container-signup .signup .inputBox .forgot-password {
   color: #315D68;
   font-size: 15px;
@@ -169,7 +186,8 @@ nav.sticky-nav {
   text-align: center;
   transition: color 0.2s ease-in-out;
 }
-/* Configuration du conteneur d'entrée radio */
+
+/* Configuration for the radio input container */
 .container-signup .signup .inputBox.radioInput {
   display: flex;
   justify-content: center;
@@ -179,22 +197,26 @@ nav.sticky-nav {
   margin-left: 20px;
   font-size: 20px;
 }
-/* Configuration de radio */
+
+/* Configuration for radio inputs */
 .container-signup .signup .inputBox.radioInput input[type="radio"] {
   width: auto;  
   margin: 0px 5px;
   transform: scale(1.7);
 }
-/* Configuration du texte de l'entrée radio */
+
+/* Configuration for the radio input text */
 .container-signup .signup .inputBox.radioInput span {
   position: static;
 }
-/* Position des bulle du formulaire cote a cote */
+
+/* Positioning the radio bubbles side by side */
 .container-signup .signup .inputRow {
   display: flex;
   justify-content: space-between;
 }
-/* Réduit la largeur pour laisser de l'espace pour le margin */
+
+/* Reducing the width to leave space for margin */
 .container-signup .signup .inputRow .inputBox {
   width: calc(50% - 60px); 
 }
