--- a/Dream_shop/templates/includes/navbar.html
+++ b/Dream_shop/templates/includes/navbar.html
@@ -1,124 +1,128 @@
 {% load static %}
 
-<!-- ###################################################################################################
-     ############################################  HEADER  #############################################
-     ################################################################################################### -->
-
-
+<!-- HEADER -->
 <header>
-
-  <!-- MESSAGE PROMO -->
-  <div class="promo-message"></div>
-  <div class="top-header">
-    <div class="logo">
-      <a href="{% url 'store' %}">
-        <img src="{% static 'styles/images/MA_BOUTIQUE_LOGO_Fond-Blanc.png' %}" alt="Logo boutique">
-      </a>
+    <div class="promo-message"></div>
+    <div class="top-header">
+        <!-- Logo -->
+        <div class="logo">
+            <a href="{% url 'store' %}">
+                <img src="{% static 'styles/images/MA_BOUTIQUE_LOGO_Fond-Blanc.png' %}" alt="Logo boutique">
+            </a>
+        </div>
+        <!-- Social Icons -->
+        <div class="social-icons">
+            <a href=https://www.instagram.com/maboutiquedereve/ target="_blank" rel="noopener"><img
+                    src="{% static 'styles/images/logos-social/logo-instagram.svg' %}" alt="logo instagram"></a>
+            <a href="https://www.facebook.com/profile.php?id=100089077755487" target="_blank" rel="noopener"><img
+                    src="{% static 'styles/images/logos-social/logo-facebook.svg' %}" alt="logo facebook"></a>
+        </div>
     </div>
-    <!-- LOGOS RESEAUX SOCIAUX -->
-    <div class="social-icons">
-      <a href=https://www.instagram.com/maboutiquedereve/ target="_blank" rel="noopener"><img
-          src="{% static 'styles/images/logos-social/logo-instagram.svg' %}" alt="logo instagram"></a>
-      <a href="https://www.facebook.com/profile.php?id=100089077755487" target="_blank" rel="noopener"><img
-          src="{% static 'styles/images/logos-social/logo-facebook.svg' %}" alt="logo facebook"></a>
-    </div>
-  </div>
+    <!-- Navbar -->
+    <nav class="nav-bar sticky-nav" id="navbar_fix">
+        <ul class="menu">
+            <li>
+                <!-- Home link -->
+                <a href="{% url 'home' %}">Accueil</a>
+            </li>
+            <li>
+                <!-- Women's section -->
+                <a href="{% url 'store' %}?gender=women">Femme</a>
+                <ul>
+                    <li>
+                        <!-- Women's clothing -->
+                        <a href="{% url 'store' %}?gender=women&category=clothingWomen">Vêtements</a>
+                        <ul>
+                            {% for category in women_links %}
+                            <li>
+                                <!-- Specific category of women's clothing -->
+                                <a href="{{ category.get_url }}">{{ category.category_online }}</a>
+                            </li>
+                            {% endfor %}
+                        </ul>
+                    </li>
+                    <li>
+                        <!-- Women's accessories -->
+                        <a href="{% url 'store' %}?gender=women&category=clothingAccessWomen">Accessoires</a>
+                        <ul>
+                            {% for category in women_acc %}
+                            <li>
+                                <!-- Specific category of women's accessories -->
+                                <a href="{{ category.get_url }}">{{ category.category_online }}</a>
+                            </li>
+                            {% endfor %}
+                        </ul>
+                    </li>
+                    <li>
+                        <!-- Complete women's collection -->
+                        <a href="{% url 'store' %}?gender=women">Collection Complète</a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <!-- Men's section -->
+                <a href="{% url 'store' %}?gender=men">Homme</a>
+                <ul>
+                    <li>
+                        <!-- Men's clothing -->
+                        <a href="{% url 'store' %}?gender=men&category=clothingMen">Vêtements</a>
+                        <ul>
+                            {% for category in men_links %}
+                            <li>
+                                <!-- Specific category of men's clothing -->
+                                <a href="{{ category.get_url }}">{{ category.category_online }}</a>
+                            </li>
+                            {% endfor %}
+                        </ul>
+                    </li>
+                    <li>
+                        <!-- Men's accessories -->
+                        <a href="{% url 'store' %}?gender=men&category=clothingAccessMen">Accessoires</a>
+                        <ul>
+                            {% for category in men_acc %}
+                            <li>
+                                <!-- Specific category of men's accessories -->
+                                <a href="{{ category.get_url }}">{{ category.category_online }}</a>
+                            </li>
+                            {% endfor %}
+                        </ul>
+                    </li>
+                    <li>
+                        <!-- Complete men's collection -->
+                        <a href="{% url 'store' %}?gender=men">Collection Complète</a>
+                    </li>
 
-
-  <!-- ###################################################################################################
-       ############################################  NAVBAR  #############################################
-       ################################################################################################### -->
-  <nav class="nav-bar sticky-nav" id="navbar_fix">
-    <ul class="menu">
-      <li>
-        <a href="{% url 'home' %}">Accueil</a>
-      </li>
-      <li>
-        <a href="{% url 'store' %}?gender=women">Femme</a>
-        <ul>
-          <li>
-            <a href="{% url 'store' %}?gender=women&category=clothingWomen">Vêtements</a>
-            <ul>
-              {% for category in women_links %}
-              <li>
-                <a href="{{ category.get_url }}">{{ category.category_online }}</a>
-              </li>
-              {% endfor %}
-            </ul>
-          </li>
-          <li>
-            <a href="{% url 'store' %}?gender=women&category=clothingAccessWomen">Accessoires</a>
-            <ul>
-              {% for category in women_acc %}
-              <li>
-                <a href="{{ category.get_url }}">{{ category.category_online }}</a>
-              </li>
-              {% endfor %}
-            </ul>
-          </li>
-          <li>
-            <a href="{% url 'store' %}?gender=women">Collection Complète</a>
-          </li>
+                </ul>
+            </li>
+            <li>
+                <!-- Contact section -->
+                <a href="#contact_section">Contact</a>
+            </li>
         </ul>
-      </li>
-      <li>
-        <a href="{% url 'store' %}?gender=men">Homme</a>
-        <ul>
-          <li>
-            <a href="{% url 'store' %}?gender=men&category=clothingMen">Vêtements</a>
-            <ul>
-              {% for category in men_links %}
-              <li>
-                <a href="{{ category.get_url }}">{{ category.category_online }}</a>
-              </li>
-              {% endfor %}
-            </ul>
-          </li>
-          <li>
-            <a href="{% url 'store' %}?gender=men&category=clothingAccessMen">Accessoires</a>
-            <ul>
-              {% for category in men_acc %}
-              <li>
-                <a href="{{ category.get_url }}">{{ category.category_online }}</a>
-              </li>
-              {% endfor %}
-            </ul>
-          </li>
-          <li>
-            <a href="{% url 'store' %}?gender=men">Collection Complète</a>
-          </li>
 
-        </ul>
-      </li>
-      <li>
-        <a href="#contact_section">Contact</a>
-      </li>
-    </ul>
-    <!-- ###################################################################################################
-         ##########################################  SEARCH BAR  ###########################################
-         ################################################################################################### -->
+        <!-- Search Bar -->
+        <form class="search-bar" action="{% url 'search' %}" method="GET">
+            <!-- Search input field -->
+            <input type="text" placeholder="Rechercher..." name="keyword">
+        </form>
 
-    <form class="search-bar" action="{% url 'search' %}" method="GET">
-      <input type="text" placeholder="Rechercher..." name="keyword">
-    </form>
-
-    <!-- ###################################################################################################
-         ###########################################  LOGOS BAR  ###########################################
-         ################################################################################################### -->
-
-    <div class="nav-section">
-      {% if user.id is None %}
-        <p class="title_close"></p>
-        <a href="{% url 'login' %}">Se connecter</a>
-        <a href="{% url 'register' %}">S'inscrire</a>
-        <a href="{% url 'cart' %}" class="nav-cart"><i class="fas fa-shopping-cart"></i><span id="cart-items">{{ cart_count }}</span></a>
-      {% else %}
-        <p class="title_open">Bonjour {{ user.first_name }}</p>
-        <a href="{% url 'logout' %}">Se déconnecter</a>
-        <a href="{% url 'cart' %}" class="nav-cart"><i class="fas fa-shopping-cart"></i><span id="cart-items">{{ cart_count }}</span></a>
-      {% endif %}
-    </div>
-  </nav>
-  <div id="dummy_nav" style="display:none;"></div>
+        <!-- Navigation Section -->
+        <div class="nav-section">
+            {% if user.id is None %}
+            <p class="title_close"></p>
+            <!-- Login link -->
+            <a href="{% url 'login' %}">Se connecter</a>
+            <!-- Register link -->
+            <a href="{% url 'register' %}">S'inscrire</a>
+            <!-- Shopping cart link -->
+            <a href="{% url 'cart' %}" class="nav-cart"><i class="fas fa-shopping-cart"></i><span id="cart-items">{{ cart_count }}</span></a>
+            {% else %}
+            <p class="title_open">Bonjour {{ user.first_name }}</p>
+            <a href="{% url 'logout' %}">Se déconnecter</a>
+            <a href="{% url 'cart' %}" class="nav-cart"><i class="fas fa-shopping-cart"></i><span id="cart-items">{{ cart_count }}</span></a>
+            {% endif %}
+        </div>
+    </nav>
+    <div id="dummy_nav" style="display:none;"></div>
 
 </header>
