--- a/Dream_shop/templates/store/cart.html
+++ b/Dream_shop/templates/store/cart.html
@@ -2,153 +2,151 @@
 
 {% block content %}
 
-
+<!-- Cart is Empty -->
 {% if not cart_items %}
-<!-- Affiche un message si le panier est vide -->
 <h2 class="empty-cart">Votre panier est vide</h2>
 <br><br>
 <div class="text-center">
-  <!-- Lien pour continuer les achats -->
-  <a href="{% url 'store' %}" class="btn-cart">Continuez vos achats</a>
+    <a href="{% url 'store' %}" class="btn-cart">Continuez vos achats</a>
 </div>
-
 {% else %}
-
+<!-- Cart Container -->
 <div class="cart-container">
-  <div style="flex: 0 0 70%; max-width: 70%;">
-    <!-- Titre du panier -->
-    <h3 class="title-cart">Panier d'achat</h3>
-    <div class="scrollable-cart-items">
-    <table class="cart-table">
-      <thead>
-        <tr>
-          <th>Produit</th>
-          <th>Nom</th>
-          <th>Taille</th>
-          <th>Couleur</th>
-          <th>Quantité</th>
-          <th>Prix Unitaire</th>
-          <th>Prix Total</th>
-          <th>Supprimer</th>
-        </tr>
-      </thead>
-      <tbody>
-        {% for cart_item in cart_items %}
-        <tr>
-          <!-- Colonne pour l'image du produit -->
-          <td><img class="product-img" src="{{ cart_item.product.images.url }}" alt="product image"></td>
-          <!-- Colonne pour le lien du nom du produit -->
-          <td><a href="{{ cart_item.product.get_url }}" class="link-name">{{ cart_item.product.title_online }}</a></td>
-          <!-- Colonne pour la taille du produit -->
-          <td>
-            {% if cart_item.variations.all %}
-              {% for item in cart_item.variations.sizes %}
-                {{ item.variation_value | capfirst }}
-              {% endfor %}
-            {% endif %}
-          </td>
-          <!-- Colonne pour la couleur du produit -->
-          <td>
-            {% if cart_item.variations.all %}
-              {% for item in cart_item.variations.colors %}
-                {{ item.variation_value | capfirst }}
-              {% endfor %}
-            {% endif %}
-          </td>
-          <td>
-
-            <div class="quantity-buttons">
-               <!-- Bouton pour diminuer la quantité -->
-              <a href="{% url 'remove_cart' cart_item.product.id cart_item.id %}" class="button-cart1">
-                <button type="button" onclick="decrementQuantity(this)" data-product-id="{{ cart_item.product.id }}">-</button>
-              </a>
-              <!-- Affiche la quantité actuelle -->
-              <span class="product-quantity">{{ cart_item.quantity }}</span>
-              <form class="form-product" action="{% url 'add_cart' cart_item.product.id %}" method="POST">
-                {% csrf_token %}
-                {% for item in cart_item.variations.all %}
-                <input type="hidden" name="{{ item.variation_category | lower }}" value="{{ item.variation_value | capfirst }}">
-                {% endfor %}
-              <!-- Bouton pour augmenter la quantité -->
-              <a href="#" class="button-cart2">
-                <button type="submit" onclick="incrementQuantity(this)" data-product-id="{{ cart_item.product.id }}">+</button>
-              </a>
-            </form>
+    <div style="flex: 0 0 70%; max-width: 70%;">
+        <!-- Cart Title -->
+        <h3 class="title-cart">Panier d'achat</h3>
+        <div class="scrollable-cart-items">
+            <!-- Cart Items Table -->
+            <table class="cart-table">
+                <thead>
+                    <tr>
+                        <th>Produit</th>
+                        <th>Nom</th>
+                        <th>Taille</th>
+                        <th>Couleur</th>
+                        <th>Quantité</th>
+                        <th>Prix Unitaire</th>
+                        <th>Prix Total</th>
+                        <th>Supprimer</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for cart_item in cart_items %}
+                    <tr>
+                        <!-- Product Image -->
+                        <td><img class="product-img" src="{{ cart_item.product.images.url }}" alt="product image"></td>
+                        <!-- Product Name -->
+                        <td><a href="{{ cart_item.product.get_url }}" class="link-name">{{ cart_item.product.title_online }}</a></td>
+                        <!-- Product Size -->
+                        <td>
+                            {% if cart_item.variations.all %}
+                            {% for item in cart_item.variations.sizes %}
+                            {{ item.variation_value | capfirst }}
+                            {% endfor %}
+                            {% endif %}
+                        </td>
+                        <!-- Product Color -->
+                        <td>
+                            {% if cart_item.variations.all %}
+                            {% for item in cart_item.variations.colors %}
+                            {{ item.variation_value | capfirst }}
+                            {% endfor %}
+                            {% endif %}
+                        </td>
+                        <!-- Product Quantity -->
+                        <td>
+                            <div class="quantity-buttons">
+                                <!-- Button to decrease the quantity -->
+                                <a href="{% url 'remove_cart' cart_item.product.id cart_item.id %}"
+                                    class="button-cart1">
+                                    <button type="button" onclick="decrementQuantity(this)"
+                                        data-product-id="{{ cart_item.product.id }}">-</button>
+                                </a>
+                                <!-- Display the current quantity -->
+                                <span class="product-quantity">{{ cart_item.quantity }}</span>
+                                <form class="form-product" action="{% url 'add_cart' cart_item.product.id %}" method="POST">
+                                    {% csrf_token %}
+                                    {% for item in cart_item.variations.all %}
+                                    <input type="hidden" name="{{ item.variation_category | lower }}" value="{{ item.variation_value | capfirst }}">
+                                    {% endfor %}
+                                    <!-- Button to increase the quantity -->
+                                    <a href="#" class="button-cart2">
+                                        <button type="submit" onclick="incrementQuantity(this)" data-product-id="{{ cart_item.product.id }}">+</button>
+                                    </a>
+                                </form>
+                            </div>
+                        </td>
+                        <!-- Product Unit Price -->
+                        <td>{{ cart_item.product.price|floatformat:2 }}€</td>
+                        <!-- Product Total Price -->
+                        <td>{{ cart_item.sub_total|floatformat:2 }}€</td>
+                        <!-- Remove Cart Item -->
+                        <td>
+                            <a href="{% url 'remove_cart_item' cart_item.product.id cart_item.id %}" onclick="return confirm('Etes-vous sûr de vouloir supprimer l\'article ?')">
+                                <button class="delete-button">🗑️</button>
+                            </a>
+                        </td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <div class="container-cart">
+        <div class="cart-wrapper">
+            <div class="cart-summary">
+                <!-- Cart Summary -->
+                <h4>Résumé du panier</h4>
+                <div class="summary-item">
+                    <p>Sous-total : </p><span>{{ total|floatformat:2 }}€</span>
+                </div>
+                <div class="summary-item">
+                    <p>Code de réduction :</p>
+                    <!--  Input field for the discount code -->
+                    <input type="text" id="discountCode" name="discountCode">
+                </div>
+                <div class="summary-item">
+                    <!-- Delivery field -->
+                    <p>Option de livraison : </p><span>Gratuit</span>
+                </div>
+                <div class="summary-item">
+                    <!-- Tax field -->
+                    <p>Taxes incluses: </p><span>{{ tax|floatformat:2 }}€</span>
+                </div>
+                <div class="summary-item total">
+                    <!-- Final price -->
+                    <p>Total final : </p><span>{{ total|floatformat:2 }}€</span>
+                </div>
+                <div class="checkout-buttons">
+                    <!-- Link to continue shopping -->
+                    <a href="{% url 'store' %}">
+                        <button type="button">Continuer les achats</button>
+                    </a>
+                    <!-- Button to proceed to checkout -->
+                    <button type="button" onclick="return confirm('Merci pour votre achat !')">Passer à la caisse</button>
+                </div>
             </div>
-          </td>
-          <!-- Colonne pour le prix unitaire du produit -->
-          <td>{{ cart_item.product.price|floatformat:2 }}€</td>
-          <!-- Colonne pour le prix total du produit dans le panier -->
-          <td>{{ cart_item.sub_total|floatformat:2 }}€</td>
-          <td>
-            <!-- Bouton pour supprimer un article du panier -->
-            <a href="{% url 'remove_cart_item' cart_item.product.id cart_item.id %}" onclick="return confirm('Etes-vous sûr de vouloir supprimer l\'article ?')">
-            <button class="delete-button">🗑️</button>
-            </a>
-          </td>
-        </tr>
-        {% endfor %}
-      </tbody>
-    </table>
+        </div>
     </div>
-  </div>
-  <div class="container-cart">
-    <div class="cart-wrapper">
-      <div class="cart-summary">
-        <!-- Résumé du panier -->
-        <h4>Résumé du panier</h4>
-        <div class="summary-item">
-          <p>Sous-total : </p><span>{{ total|floatformat:2 }}€</span>
-        </div>
-        <div class="summary-item">
-          <p>Code de réduction :</p>
-          <!-- Champ de saisie pour le code de réduction -->
-          <input type="text" id="discountCode" name="discountCode">
-        </div>
-        <div class="summary-item">
-          <!-- Champ livraison -->
-          <p>Option de livraison : </p><span>Gratuit</span>
-        </div>
-        <div class="summary-item">
-          <!-- Champ pour les taxes -->
-          <p>Taxes incluses: </p><span>{{ tax|floatformat:2 }}€</span>
-        </div>
-        <div class="summary-item total">
-          <!-- Prix final -->
-          <p>Total final : </p><span>{{ total|floatformat:2 }}€</span>
-        </div>
-        <div class="checkout-buttons">
-          <!-- Lien pour continuer les achats -->
-          <a href="{% url 'store' %}">
-            <button type="button">Continuer les achats</button>
-          </a>
-          <!-- Bouton pour passer à la caisse -->
-          <button type="button" onclick="return confirm('Merci pour votre achat !')">Passer à la caisse</button>
-        </div>
-      </div>
-    </div>
-  </div>
 
-  {% endif %}
+    {% endif %}
 </div>
 
-
+<!-- JavaScript Functions -->
 <script>
-  // Fonction pour augmenter la quantité
-  function incrementQuantity(buttonElement) {
-    var quantitySpan = buttonElement.parentElement.querySelector('.product-quantity');
-    var currentQuantity = parseInt(quantitySpan.innerText);
-    quantitySpan.innerText = currentQuantity + 1;
-  }
-  // Fonction pour diminuer la quantité
-  function decrementQuantity(buttonElement) {
-    var quantitySpan = buttonElement.parentElement.querySelector('.product-quantity');
-    var currentQuantity = parseInt(quantitySpan.innerText);
-    if (currentQuantity > 1) {
-      quantitySpan.innerText = currentQuantity - 1;
+    // Function to increment quantity
+    function incrementQuantity(buttonElement) {
+        var quantitySpan = buttonElement.parentElement.querySelector('.product-quantity');
+        var currentQuantity = parseInt(quantitySpan.innerText);
+        quantitySpan.innerText = currentQuantity + 1;
     }
-  }
-
+    // Function to decrement quantity
+    function decrementQuantity(buttonElement) {
+        var quantitySpan = buttonElement.parentElement.querySelector('.product-quantity');
+        var currentQuantity = parseInt(quantitySpan.innerText);
+        if (currentQuantity > 1) {
+            quantitySpan.innerText = currentQuantity - 1;
+        }
+    }
 </script>
-
 {% endblock %}
