--- a/Dream_shop/templates/store/product_detail.html
+++ b/Dream_shop/templates/store/product_detail.html
@@ -2,71 +2,81 @@
 {% load static %}
 
 {% block content %}
-<!-- Affichage des détails du produit -->
+<!-- Start of Product Detail Card -->
 <div class="product-card-detail">
     <div class="product-image-detail">
-        <!-- Image principale du produit -->
+        <!-- Main Product Image -->
         <img id="product-main-image" src="{{ single_product.images.url }}" alt="Image de l'article">
+        <!-- Product Thumbnails -->
         <div class="product-thumbnails">
-            <!-- Vignettes d'images supplémentaires du produit -->
+            <!-- Second Image Thumbnail -->
             {% if single_product.second_image %}
             <img class="product-thumbnail" src="{{ single_product.second_image.url }}" alt="Image 2 de l'article">
             {% endif %}
+            <!-- Third Image Thumbnail -->
             {% if single_product.third_image %}
             <img class="product-thumbnail" src="{{ single_product.third_image.url }}" alt="Image 3 de l'article">
             {% endif %}
+            <!-- Fourth Image Thumbnail -->
             {% if single_product.fourth_image %}
             <img class="product-thumbnail" src="{{ single_product.fourth_image.url }}" alt="Image 4 de l'article">
             {% endif %}
+            <!-- Fifth Image Thumbnail -->
             {% if single_product.fifth_image %}
             <img class="product-thumbnail" src="{{ single_product.fifth_image.url }}" alt="Image 5 de l'article">
             {% endif %}
         </div>
     </div>
 
-
     <div class="product-info-detail">
-        <!-- Formulaire pour ajouter le produit au panier -->
+        <!-- Add to Cart Form -->
         <form action="{% url 'add_cart' single_product.id %}" method="POST">
             {% csrf_token %}
-        <h2>{{ single_product.title_online}}</h2><!-- Titre du produit -->
-        <h3>{{ single_product.price|floatformat:2 }}</h3><!-- Prix du produit -->
-        <p>{{ single_product.description }}</p><!-- Description du produit -->
-        <div class="select-quantity-detail">
-            <div>
-                <label for="product-size">Taille:</label>
-                <select id="product-size" name="size" required>
-                    <option value="" disabled selected>Choisir la taille</option>
-                    {% for i in single_product.variation_set.sizes %}
-                    <option value="{{ i.variation_value | lower }}">{{ i.variation_value | capfirst }}</option>
-                    {% endfor %}
-                </select>
+            <!-- Product Title -->
+            <h2>{{ single_product.title_online}}</h2>
+            <!-- Product Price -->
+            <h3>{{ single_product.price|floatformat:2 }}</h3>
+            <!-- Product Description -->
+            <p>{{ single_product.description }}</p>
+            <!-- Select Quantity and Options -->
+            <div class="select-quantity-detail">
+                <div>
+                    <!-- Select Size -->
+                    <label for="product-size">Taille:</label>
+                    <select id="product-size" name="size" required>
+                        <option value="" disabled selected>Choisir la taille</option>
+                        {% for i in single_product.variation_set.sizes %}
+                        <option value="{{ i.variation_value | lower }}">{{ i.variation_value | capfirst }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+                <div>
+                    <!-- Select Color -->
+                    <label for="product-color">Couleur:</label>
+                    <select id="product-color" name="color" required>
+                        <option value="" disabled selected>Choisir la couleur</option>
+                        {% for i in single_product.variation_set.colors %}
+                        <option value="{{ i.variation_value | lower }}">{{ i.variation_value | capfirst }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
             </div>
-            <div>
-                <label for="product-color">Couleur:</label>
-                <select id="product-color" name="color" required>
-                    <option value="" disabled selected>Choisir la couleur</option>
-                    {% for i in single_product.variation_set.colors %}
-                    <option value="{{ i.variation_value | lower }}">{{ i.variation_value | capfirst }}</option>
-                    {% endfor %}
-                </select>
-            </div>
-        </div>
-        {% if single_product.stock <= 0 %}
-        <!-- Affiche un message si le stock est épuisé -->
-        <h5 class="text-danger">Rupture De Stock</h5>
-            {% else %}
+            {% if single_product.stock <= 0 %} <!-- Out of Stock Message -->
+                <h5 class="text-danger">Rupture De Stock</h5>
+                {% else %}
+                <!-- Add to Cart Button -->
                 <a class="add-to-cart-link">
-                    <button type="submit" class="btn-detail">Ajouter au panier<i class="fas fa-shopping-cart"></i></button>
+                    <button type="submit" class="btn-detail">Ajouter au panier<i
+                            class="fas fa-shopping-cart"></i></button>
                 </a>
-        {% endif %}
-    </form>
+                {% endif %}
+        </form>
     </div>
 </div>
+<!-- End of Product Detail Card -->
 
 
-
-<!-- Changement d'image au clic sur les vignettes -->
+<!-- JavaScript Thumbnail Functionality -->
 <script>
     window.addEventListener('load', function () {
         var thumbnails = document.getElementsByClassName('product-thumbnail');
@@ -78,6 +88,7 @@
 
                 var thumbnailImageUrl = this.src;
 
+                // Swap Main Image and Thumbnail Image URLs
                 mainImage.src = thumbnailImageUrl;
                 this.src = mainImageUrl;
             });
