--- a/Dream_shop/templates/store/store.html
+++ b/Dream_shop/templates/store/store.html
@@ -4,89 +4,91 @@
 
 {% block content %}
 <div class="background-store">
-  {% if 'search' in request.path %}
-  <!-- Affiche le titre "Résultat de la recherche" si le chemin de la requête contient la chaîne de caractères "search" -->
-  <h1 class="page-title">
-    Résultat de la recherche
-  </h1>
-  {% else %}
-  <!-- Affiche le titre contenu dans la variable 'page_title' -->
-  <h1 class="page-title">
-    {{ page_title }}
-  </h1>
-  {% endif %}
-  <!-- Affiche le nombre total d'articles -->
-  <span class="product_count">Total articles :<b>{{ product_count }}</b></span>
-  <div class="product-grid">
-    {% if products %}
-    <!-- Boucle sur la liste de produits -->
-    {% for product in products %}
-    <div class="product-card{% if not product.second_image %} no-second-image{% endif %}">
-      <div class="product-image">
-          <div class="image-face front">
-              <!-- Affiche l'image principale du produit -->
-              <img src="{{ product.images.url }}" alt="Vêtement de face">
-          </div>
-          {% if product.second_image %}
-          <div class="image-face back">
-              <!-- Affiche l'image secondaire du produit, si elle existe -->
-              <img src="{{ product.second_image.url }}" alt="Vêtement de dos">
-          </div>
-          {% endif %}
-      </div>
-      <!-- Affiche le nom du produit -->
-      <h2 class="product-name">{{ product.title_online }}</h2>
-      <!-- Affiche le prix du produit -->
-      <p class="product-price">€ {{ product.price|floatformat:2 }}</p>
-      <!-- Affiche un lien vers les détails du produit -->
-      <a class="product-details" href="{{ product.get_url }}">Voir les détails</a>
-    </div>
-    {% endfor %}
+    {% if 'search' in request.path %}
+    <!-- Display the "Search Result" title if the request path contains the string "search" -->
+    <h1 class="page-title">
+        Résultat de la recherche
+    </h1>
     {% else %}
-      <!-- Affiche un message lorsque aucun produit n'est disponible -->
-      <h2 class="page-title2">Aucun résultat trouvé...</h2>
+    <!-- Display the title contained in the 'page_title' variable -->
+    <h1 class="page-title">
+        {{ page_title }}
+    </h1>
     {% endif %}
-  </div>
+    <!-- Display the total number of articles -->
+    <span class="product_count">Total articles :<b>{{ product_count }}</b></span>
+    <div class="product-grid">
+        {% if products %}
+        <!-- Loop through the list of products -->
+        {% for product in products %}
+        <div class="product-card{% if not product.second_image %} no-second-image{% endif %}">
+            <div class="product-image">
+                <div class="image-face front">
+                    <!-- Display the main image of the product -->
+                    <img src="{{ product.images.url }}" alt="Vêtement de face">
+                </div>
+                {% if product.second_image %}
+                <div class="image-face back">
+                    <!-- Display the secondary image of the product, if it exists -->
+                    <img src="{{ product.second_image.url }}" alt="Vêtement de dos">
+                </div>
+                {% endif %}
+            </div>
+            <!-- Display the name of the product -->
+            <h2 class="product-name">{{ product.title_online }}</h2>
+            <!-- Display the price of the product -->
+            <p class="product-price">€ {{ product.price|floatformat:2 }}</p>
+            <!-- Display a link to view the product details -->
+            <a class="product-details" href="{{ product.get_url }}">Voir les détails</a>
+        </div>
+        {% endfor %}
+        {% else %}
+        <!-- Display a message when no products are available -->
+        <h2 class="page-title2">Aucun résultat trouvé...</h2>
+        {% endif %}
+    </div>
 </div>
 
-
-<!-- Pagination de la page store -->
+<!-- Pagination for the store page -->
 <div class="pagination">
-  {% if products.has_other_pages %}
-  <div class="page-item">
-      {% if products.has_previous %}
-      <!-- Affiche un lien vers la page précédente -->
-      <a class="page-link" href="?gender={{ request.GET.gender }}&category={{ request.GET.category }}&page={{ products.previous_page_number }}">Page précédente</a>
-      {% else %}
-          <!-- Désactive le lien si aucune page précédente n'est disponible -->
-          <span class="page-link disabled"></span>
-      {% endif %}
-  </div>
+    {% if products.has_other_pages %}
+    <div class="page-item">
+        {% if products.has_previous %}
+        <!-- Display a link to the previous page -->
+        <a class="page-link"
+            href="?gender={{ request.GET.gender }}&category={{ request.GET.category }}&page={{ products.previous_page_number }}">Page
+            précédente</a>
+        {% else %}
+        <!-- Disable the link if no previous page is available -->
+        <span class="page-link disabled"></span>
+        {% endif %}
+    </div>
 
-  {% for num in products.paginator.page_range %}
-      {% if products.number == num %}
-          <div class="page-item active">
-              <!-- Affiche le numéro de page actuel en tant que lien actif -->
-              <span class="page-link">{{ num }}</span>
-          </div>
-      {% else %}
-          <div class="page-item">
-            <!-- Affiche un lien vers la page correspondante -->
-            <a class="page-link" href="?gender={{ request.GET.gender }}&category={{ request.GET.category }}&page={{ num }}">{{ num }}</a>
-          </div>
-      {% endif %}
-  {% endfor %}
-
-  <div class="page-item">
-      {% if products.has_next %}
-      <!-- Affiche un lien vers la page suivante -->
-      <a class="page-link" href="?gender={{ request.GET.gender }}&category={{ request.GET.category }}&page={{ products.next_page_number }}">Page suivante</a>
-      {% else %}
-          <!-- Désactive le lien si aucune page suivante n'est disponible -->
-          <span class="page-link disabled"></span>
-      {% endif %}
-  </div>
-  {% endif %}
+    {% for num in products.paginator.page_range %}
+    {% if products.number == num %}
+    <div class="page-item active">
+        <!-- Display the current page number as an active link -->
+        <span class="page-link">{{ num }}</span>
+    </div>
+    {% else %}
+    <div class="page-item">
+        <!-- Display a link to the corresponding page -->
+        <a class="page-link"
+            href="?gender={{ request.GET.gender }}&category={{ request.GET.category }}&page={{ num }}">{{ num }}</a>
+    </div>
+    {% endif %}
+    {% endfor %}
+    <div class="page-item">
+        {% if products.has_next %}
+        <!-- Display a link to the next page -->
+        <a class="page-link"
+            href="?gender={{ request.GET.gender }}&category={{ request.GET.category }}&page={{ products.next_page_number }}">Page
+            suivante</a>
+        {% else %}
+        <!-- Disable the link if no next page is available -->
+        <span class="page-link disabled"></span>
+        {% endif %}
+    </div>
+    {% endif %}
 </div>
-
 {% endblock %}
